Fixed dropdowns not showing

--- a/src/scss/components/_dropdown.scss
+++ b/src/scss/components/_dropdown.scss
@@ -1,3 +1,6 @@
+.md-dropdown-wrapper {
+  position: relative;
+}
 .md-dropdown {
   display: none;
   background-color: #fff;
